Fix [section inputForm] behind

--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@ body {
 #inputSection.fixed {
   position: fixed;
   padding: 10px 0;
+  z-index: 100;
 }
 
 #taskManagementApp {
-    min-height: 100%;
+  min-height: 100%;
 }
